[package]
name = "token-mill-v2-sdk"
version = { workspace = true }
edition = { workspace = true }

[lib]
doctest = false

[dependencies]
token-mill-v2-client = { path = "../client" }
jupiter-amm-interface = "0.5.1"
solana-sdk = "2.2.1"
anyhow = "1.0.98"
ruint = "1.15.0"
litesvm = "0.6.1"
litesvm-token = "0.6.1"
num-traits = "0.2.19"
borsh = "1.5.7"
reqwest = { version = "0.12.22", features = ["blocking", "rustls-tls"] }
serde_json = "1.0.142"
bs58 = "0.5.1"
bincode = "1"
